feat(api): add forgot password logic, update openapi
